# localshare

./: .gitignore  Cargo.toml  LICENSE  README.md
server_test/: LocalShare.toml  localshare.db
server_test/static/: upload.html
src/: assets.rs  cli.rs  config.rs  errors.rs  fm.rs  lib.rs  main.rs  mdns.rs  qr.rs  record.rs  server.rs  session.rs  utils.rs
static/: index.html  indexv2.html  login.html  not_found.html  upload.html  uploadv2.html
